# Riemann

./: .gitignore  CMakeLists.txt  Dominio.cpp  Dominio.h  ExpressionParser.cpp  ExpressionParser.h  Graficadora.py  Rectangulo.json  Riemann_3.04.cbp  Riemann_3.04.depend  Riemann_3.04.layout  Utils.cpp  Utils.h  cutIntegral.cpp  cutIntegral.h  cutintegral.h  main.cpp  node.h  sustx.h  toPostFix.cpp  toPostFix.h
datos/: Datos.json  Parametros.json  Rectangulo.json
